--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <h1>Розклад<img src="https://learn.logikaschool.com/uploads/student/3135133/67c2d82ce5621.png"></h1>
         </header>
         <nav>
-             <a href="#" class="back">повернутись</a>  
+             <a href=" https://kostyasigma21638.github.io/shkola4/" class="back">повернутись</a>  
              
         </nav>
         <table>
